--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      @import url('https://fonts.cdnfonts.com/css/general-sans?styles=135303');
+      @import url('https://fonts.cdnfonts.com/css/lato?styles=170780,17388');
+    </style>
     <title>React App</title>
   </head>
   <body>
